--- a/lhamidou-nuxt/package.json
+++ b/lhamidou-nuxt/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@nuxt/eslint": "^0.3.13",
+    "@supabase/supabase-js": "^2.43.4",
     "nuxt": "^3.11.2",
     "vue": "^3.4.27",
     "vue-router": "^4.3.2"
