--- a/lhamidou-nuxt/package.json
+++ b/lhamidou-nuxt/package.json
@@ -11,12 +11,16 @@
   },
   "dependencies": {
     "@nuxt/eslint": "^0.3.13",
+    "@pinia/nuxt": "^0.5.1",
     "@supabase/supabase-js": "^2.43.4",
     "nuxt": "^3.11.2",
+    "pinia": "^2.1.7",
     "vue": "^3.4.27",
     "vue-router": "^4.3.2"
   },
   "devDependencies": {
-    "scss": "^0.2.4"
+    "scss": "^0.2.4",
+    "typescript": "^5.4.5",
+    "vue-tsc": "^1.8.27"
   }
 }
