--- a/lhamidou-nuxt/package.json
+++ b/lhamidou-nuxt/package.json
@@ -19,6 +19,7 @@
     "vue-router": "^4.3.2"
   },
   "devDependencies": {
+    "@nuxtjs/supabase": "^1.2.2",
     "scss": "^0.2.4",
     "typescript": "^5.4.5",
     "vue-tsc": "^1.8.27"
