--- a/lhamidou-nuxt/package.json
+++ b/lhamidou-nuxt/package.json
@@ -13,6 +13,7 @@
     "@nuxt/eslint": "^0.3.13",
     "@pinia/nuxt": "^0.5.1",
     "@supabase/supabase-js": "^2.43.4",
+    "bootstrap": "^5.3.2",
     "nuxt": "^3.11.2",
     "pinia": "^2.1.7",
     "vue": "^3.4.27",
