--- a/lhamidou-nuxt/package.json
+++ b/lhamidou-nuxt/package.json
@@ -14,6 +14,7 @@
     "@pinia/nuxt": "^0.5.1",
     "@supabase/supabase-js": "^2.43.4",
     "bootstrap": "^5.3.2",
+    "nodemailer": "^6.9.13",
     "nuxt": "^3.11.2",
     "pinia": "^2.1.7",
     "vue": "^3.4.27",
