--- a/lhamidou-nuxt/package.json
+++ b/lhamidou-nuxt/package.json
@@ -17,11 +17,13 @@
     "nodemailer": "^6.9.13",
     "nuxt": "^3.11.2",
     "pinia": "^2.1.7",
+    "primevue": "^3.52.0",
     "vue": "^3.4.27",
     "vue-router": "^4.3.2"
   },
   "devDependencies": {
     "@nuxtjs/supabase": "^1.2.2",
+    "nuxt-primevue": "^3.0.0",
     "scss": "^0.2.4",
     "typescript": "^5.4.5",
     "vue-tsc": "^1.8.27"
