--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@netlify/functions": "^2.7.0",
     "@nuxt/eslint": "^0.3.13",
     "@pinia/nuxt": "^0.5.1",
     "@supabase/supabase-js": "^2.43.4",
