udpate uery param in netlify function and make it dynamic

--- a/netlify.toml
+++ b/netlify.toml
@@ -12,3 +12,7 @@
   from = "/api/project/:id"
   to = "/.netlify/functions/project/:id"
   status = 200
+
+[context.dev.environment]
+  NODE_ENV= "devlopment"
+  LOCAL_HOST="http://localhost:8888"  
