--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@automapper/classes": "^8.8.1",
+    "@automapper/core": "^8.8.1",
     "@nuxt/eslint": "^0.3.13",
     "@pinia/nuxt": "^0.5.1",
     "@supabase/supabase-js": "^2.43.4",
@@ -18,6 +20,7 @@
     "nuxt": "^3.11.2",
     "pinia": "^2.1.7",
     "primevue": "^3.52.0",
+    "reflect-metadata": "^0.1.14",
     "vue": "^3.4.27",
     "vue-router": "^4.3.2"
   },
