--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@automapper/classes": "^8.8.1",
     "@automapper/core": "^8.8.1",
     "@nuxt/eslint": "^0.3.13",
+    "@nuxt/fonts": "^0.7.1",
     "@pinia/nuxt": "^0.5.1",
     "@supabase/supabase-js": "^2.43.4",
     "bootstrap": "^5.3.2",
